# musicbee-media-controls

./: .gitignore  README.md
handler/: Cargo.toml  build.rs
handler/res/: base-icon.xcf
handler/src/: cli.rs  communication.rs  config.rs  daemon.rs  filesystem.rs  logger.rs  main.rs  media_controls.rs  messages.rs  tray.rs
handler/src/listener/: media_controls.rs  mod.rs  rpc.rs
plugin/: build.sh  init.sh  install.sh  mb_LinuxMediaControls.cs
