[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# most important parts
## zbus is significantly faster for me
souvlaki = { version = "0.6.0", default-features = false, features = ["use_zbus"] }
notify = "5.1.0"
tray-item = "0.7.1"
# utilities
daemonize = "0.5.0"
log = "0.4.0"
env_logger = "0.9.0"
open = "3"
# dependencies
gtk = "0.15"
