[package]
name = "musicbee_mediakeys"
version = "0.1.0"
edition = "2021"
build="build.rs"
description="The linux-side dameon for Musicbee Linux Mediakeys"
authors=["baanan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# most important parts
## zbus is significantly faster for me
souvlaki = { git = "https://github.com/Sinono3/souvlaki", branch = "volume", default-features = false, features = ["use_zbus"] }
notify = "5.1.0"
tray-item = { version = "0.8.0", features = ["libappindicator"] }
# utilities
daemonize = "0.5.0"
log = "0.4.0"
env_logger = "0.9.0"
open = "3"
url = "2.3.1"
gtk = "0.15"
gio = "0.15"
glib = "0.15"
serde = "1.0.160"
dirs = "5.0.0"
ron = "0.8.0"
aho-corasick = "1.0.1"
lazy_static = "1.4.0"
png = "0.16.8"
thiserror = "1.0.44"
clap = { version = "4.3.19", features = ["derive"] }
anyhow = "1.0.72"
directories = "5.0.1"

[build-dependencies]
dirs = "5.0.0"
